# rust-idf-dev-workspace

./: .gitignore  .gitmodules  Cargo.toml  README.md
idf-playground/: CMakeLists.txt  Cargo.toml  Xargo.toml  idf.sh  sdkconfig  symbol_renaming.map
idf-playground/idf-shim/: CMakeLists.txt  entry_point.c  shim_freertos.c
idf-playground/src/: lib.rs
