[package]
name = "idf-playground"
version = "0.1.0"
authors = ["Vladislav Nikonov <pacmancoder@gmail.com>"]
edition = "2018"

[lib]
name = "firmware"
crate-type = ["staticlib"]

[dependencies]
idf-hal = { git = "https://github.com/rust-idf/rust-idf-hal" }
idf-alloc = { git = "https://github.com/rust-idf/rust-idf-alloc" }
freertos_rs = "0.3.0"

[target.xtensa-esp8266-none-elf.dependencies]
panic-halt = "0.2.0"